<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.example</groupId>
	<artifactId>ignite-example</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<ignite-version>2.16.0</ignite-version>
	</properties>

	<dependencies>
		<!-- Apache Ignite Core -->
		<dependency>
			<groupId>org.apache.ignite</groupId>
			<artifactId>ignite-core</artifactId>
			<version>${ignite-version}</version>
		</dependency>

		<!-- Apache Ignite Spring -->
		<dependency>
			<groupId>org.apache.ignite</groupId>
			<artifactId>ignite-spring</artifactId>
			<version>${ignite-version}</version>
		</dependency>

		<!-- Apache Ignite Indexing -->
		<dependency>
			<groupId>org.apache.ignite</groupId>
			<artifactId>ignite-indexing</artifactId>
			<version>${ignite-version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.ignite</groupId>
			<artifactId>ignite-direct-io</artifactId>
			<version>${ignite-version}</version>
		</dependency>


		<!-- Logging dependencies -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
		</dependency>


		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.6.3</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<executable>java</executable>
					<arguments>

						<argument>
							--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</argument>
						<argument>
							--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</argument>
						<argument>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argument>
						<argument>
							--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</argument>
						<argument>
							--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</argument>
						<argument>
							--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</argument>
						<argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
						<argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
						<argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
						<argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
						<argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
						<argument>--add-opens=java.base/java.math=ALL-UNNAMED</argument>
						<argument>
							--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</argument>
						<argument>-agentlib:jdwp=transport=dt_socket,server=y,address=8000,suspend=n</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>-Djava.net.preferIPv4Stack=true</argument>
						<argument>com.example.IgniteWALExample</argument>
						<argument>--parallelism=24</argument>
					</arguments>

				</configuration>
			</plugin>
			
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.example.IgniteWALExample</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
		</plugins>
	</build>
</project>
